// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthError.svelte > should render error with name 1`] = `
<div>
  <div
    class="flex flex-col"
    data-error=""
  >
    <span>
      <!---->
       
      AuthApi:
      <!---->
       An error
    </span>
  </div>
  
</div>
`;

exports[`AuthError.svelte > should render error with status & name 1`] = `
<div>
  <div
    class="flex flex-col"
    data-error=""
  >
    <span>
      400:
      <!---->
       
      AuthApi:
      <!---->
       An error
    </span>
  </div>
  
</div>
`;

exports[`AuthError.svelte > should render error with status 1`] = `
<div>
  <div
    class="flex flex-col"
    data-error=""
  >
    <span>
      400:
      <!---->
       
      <!---->
       An error
    </span>
  </div>
  
</div>
`;

exports[`AuthError.svelte > should render with changes 1`] = `
<div>
  <div
    class="flex flex-col"
    data-error=""
  >
    <span>
      <!---->
       
      <!---->
       An error occurred
    </span>
  </div>
  
</div>
`;

exports[`AuthError.svelte > should render with changes 2`] = `
<div>
  <div
    class="flex flex-col"
    data-error=""
  >
    <span>
      <!---->
       
      AuthApi:
      <!---->
       Something else
    </span>
  </div>
  
</div>
`;

exports[`AuthError.svelte > should render with changes 3`] = `
<div>
  <div
    class="flex flex-col"
    data-error=""
  >
    <span>
      400:
      <!---->
       
      AuthApi:
      <!---->
       Another error
    </span>
  </div>
  
</div>
`;
